# sybil-detection-pond-challenge

./: .gitignore  Makefile  README.md  pyproject.toml
data/submissions/: 2025-05-07_11-42-29-final-pipeline-vec-fs-hgbc.csv  2025-05-07_16-22-42-final-pipeline-flipside-vec-fs-hgbc.csv  2025-05-07_16-27-57-final-pipeline-flipside-vec-fs-hgbc-post.csv  2025-05-08_12-14-40-final-pipeline-all-vec-fs-hgbc.csv  2025-05-08_12-14-49-final-pipeline-all-vec-fs-hgbc-post.csv  2025-05-08_12-33-33-final-pipeline-all-hit-te-vec-fs-hgbc.csv  2025-05-10_10-41-35-final-pipeline-all-hit-te-vec-fs-lgbm-post.csv  2025-05-10_10-41-35-final-pipeline-all-hit-te-vec-fs-lgbm.csv  2025-05-14_09-52-05-final-pipeline-all-filtered-hits-vec-fs-hgbc-post.csv  2025-05-14_09-52-05-final-pipeline-all-filtered-hits-vec-fs-hgbc.csv  2025-05-14_10-08-57-final-pipeline-all-filtered-hits-vec-fs-lgbm-post.csv  2025-05-14_10-08-57-final-pipeline-all-filtered-hits-vec-fs-lgbm.csv  2025-05-14_12-14-59-final-pipeline-all-filtered-hits-vec-fs-lgbm-post.csv  2025-05-14_12-14-59-final-pipeline-all-filtered-hits-vec-fs-lgbm.csv  2025-05-15_10-29-03-final-pipeline-all-filtered-hitsonlyte-vec-fs-lgbm-post.csv  2025-05-15_10-29-03-final-pipeline-all-filtered-hitsonlyte-vec-fs-lgbm.csv  limon-rf-20250514-222839.csv  limon-rf-20250514-224258.csv  (+4 more)
docs/: competition.md  limon-subs.md  notes.md  writeup.md
notebooks/: checker.ipynb  flipside.ipynb  model jorge.ipynb  model.ipynb  preprocessing jorge.ipynb  preprocessing.ipynb
scripts/: community_detection_simple.py  graph_embeddings.py  network_metrics.py
(+10 files in other folders)
